Flex Header/Footer
Flexbox header/footer & responsive design. Link buttons functional via React Router.

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,23 +1,31 @@
+/* Main Footer */
 footer {
     background-color: #98fb98;
+    max-height: 3.5em;
+    padding: 5px 15px;
 
-    /* grid */
-    display: grid;
-    grid-template-areas: "p p p . h2";
-    grid-template-columns: 1fr 1fr 1fr 7fr;
-    grid-template-rows: max-content;
+    display: flex;
     align-items: center;
 }
 
-footer p {
 
-    /* grid */
-    justify-self: center;
+/* Other wrapper */
+.other-wrapper {
+    margin-right: auto;
 }
-footer h2 {
-    text-shadow: 3px 3px 9px grey;
-    padding: 0px 10px;
 
-    /* grid */
-    justify-self: end;
+/* Other Text */
+footer p {
+    display: inline-block;
+
+    padding-right: 15px;
+    margin: 0.5em;
+}
+
+/* Logo */
+footer h2 {
+    font-style: italic;
+    text-shadow: 2px 2px 5px #2e2bd4;
+
+    
 }
