--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -18,7 +18,7 @@ footer {
 footer p {
     display: inline-block;
 
-    padding-right: 15px;
+    padding-right: 10px;
     margin: 0.5em;
 }
 
@@ -26,6 +26,6 @@ footer p {
 footer h2 {
     font-style: italic;
     text-shadow: 2px 2px 5px #2e2bd4;
-
+    margin: 0.6em;
     
 }
