moved all page sections (header, main, footer) into its own pagesections folder and updated all imports. Updated CSS styling for login form and add item form

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -18,6 +18,19 @@
     border: 10px solid darkred;
 }
 
-.form-wrapper {
-    border: 10px solid green;
+.newitem-wrapper {
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+.signin-wrapper {
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
