--- a/src/components/PageSections/Main.css
+++ b/src/components/PageSections/Main.css
@@ -1,6 +1,7 @@
 /* STYLES FOR THE "MAIN" BLOCK OF EACH PAGE */
-
+/* -> original styling */
 Main {
     padding: 10px;
     border: 10px solid black;
 }
+
