--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -24,3 +24,21 @@
   button:hover {
     background-color: #45a049;
   }
+
+  .signup-link p {
+    text-align: center;
+    margin-bottom: 0;
+  }
+  
+  .signup-link a:link {
+      color: blue;
+      text-decoration: none;
+  }
+
+  .signup-link a:hover {
+      text-decoration: underline;
+  }
+
+  .signup-link a:visited {
+      color: purple;
+  }
