Updated Art Items, added 'date' prop for paintings

--- a/src/components/PageSections/Footer.css
+++ b/src/components/PageSections/Footer.css
@@ -1,7 +1,7 @@
 /* Main Footer */
 footer {
     background-color: #98fb97;
-    max-height: 3.5em;
+    max-height: fit-content;
     padding: 5px 15px;
     display: flex;
     align-items: center;
@@ -29,5 +29,4 @@ footer h2 {
     font-style: italic;
     text-shadow: 2px 2px 5px #2e2bd4;
     margin: 0.6em;
-    
 }
