--- a/src/components/Art.css
+++ b/src/components/Art.css
@@ -2,7 +2,7 @@
 
 .art-block img {
     max-width: 100%;
-    height: 400px;
+    min-height: 400px;
     object-fit: cover;
     overflow: hidden;
 }
@@ -17,6 +17,7 @@
 }
 
 .art-block {
+    text-align: center;
     background-color: #fff; /* Match the color to your design */
     border: none; /* Remove the red border */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
@@ -31,12 +32,14 @@
 }
 
 .art-block h2 {
+    max-width: 80%;
     color: #333;
-    margin-top: 0.5em; /* Space above the title */
+    margin-top: 0.5em; 
+    margin: 0.5em auto; /* title spacing */
 }
 
 .art-block p {
     color: #666;
     font-size: 0.9em; /* Smaller font size for artist name */
-    margin-top: 0.25em; /* Space above the artist name */
+    margin: 0.25em auto; /* Space above the artist name */
 }
